tests/dataset/tpc-ds/compiler/pl/q10.error
run: exit status 2
ERROR: /tmp/q10.pl:58: user:main '<meta-call>'/1: Unknown procedure: exists/2
